# sortxml

./: LICENSE  README.md  example.xml  setup.cfg  sortxml.py
