[metadata]
name = sortxml
version = attr: sortxml.__version_str__
description = A simple XML element sorter
long_description = file: README.md
keywords = xml, sort
license = BSD 3-Clause License
license_files = LICENSE
url = https://www.github.com/kopachris/sortxml
author = Chris Koch
author_email = kopachris@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities

[options]
py_modules = sortxml
install_requires =
    python-dateutil
setup_requires =
    python-dateutil
